- プロジェクト作成を追加

--- a/views/projects/form.ejs
+++ b/views/projects/form.ejs
@@ -4,10 +4,12 @@
             <!--        Here you can write extra buttons/actions for the toolbar              -->
             <a class="btn btn-primary btn-ok" href="javascript:void(0)">
                 <i class="material-icons">save</i> 保存</a>
+            <% if (!isNew) { %>
             <a class="btn btn-primary aggregate" href="javascript:void(0)">
                 <i class="material-icons">save</i> 集計</a>
             <a class="btn btn-primary createReservationReport" href="javascript:void(0)">
                 <i class="material-icons">save</i> 先月の予約レポート</a>
+            <% } %>
         </div>
 
         <ul class="nav nav-pills nav-pills-dark mt-3" role="tablist">
