--- a/views/iam/members/index.ejs
+++ b/views/iam/members/index.ejs
@@ -1,7 +1,7 @@
 <%- contentFor('title') %>
-IAMロール検索
+IAMメンバー検索
 <%- contentFor('displayId') %>
-RO-01
+ME-01
 <%- contentFor('styles') %>
 <link href="/css/simplePagination.css" rel="stylesheet">
 <%- contentFor('scripts') %>
