- IAMメンバー編集を追加

--- a/views/iam/members/index.ejs
+++ b/views/iam/members/index.ejs
@@ -16,6 +16,8 @@ ME-01
     <div class="card-body">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
+            <a class="btn btn-primary" href="/projects/<%= req.project.id %>/iam/members/new">
+                <i class="material-icons">add</i> 登録</a>
             <a class="btn btn-primary btn-ok" href="#">
                 <i class="material-icons">refresh</i> 更新</a>
             <a class="btn btn-primary btn-link" data-toggle="collapse" href=".advanced" role="button"
