--- a/views/iam/members/form.ejs
+++ b/views/iam/members/form.ejs
@@ -21,6 +21,64 @@
         <div class="tab-content">
             <div class="tab-pane active show" id="link1">
                 <% if (isNew) { %>
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-6">
+                        <label class="bmd-label-static">アプリケーションカテゴリー</label>
+                        <select class="form-control" name="member[applicationCategory]" style="width: 100%;">
+                            <option value="">---</option>
+                            <% const categories = ['customer', 'admin'] %>
+                            <% categories.forEach(function (category) { %>
+                            <%
+                            var selected = false;
+                            if (forms !== undefined) {
+                                selected = forms.member.applicationCategory === category;
+                            }
+                            %>
+                            <option value="<%= category %>" <% if (selected) { %> selected <% } %>>
+                                <%= category %>
+                            </option>
+                            <% }) %>
+                        </select>    
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-6">
+                        <label class="bmd-label-static">メンバータイプ</label>
+                        <select class="form-control" name="member[typeOf]" style="width: 100%;">
+                            <option value="">---</option>
+                            <% const memberTypes = ['Person', 'WebApplication'] %>
+                            <% memberTypes.forEach(function (memberType) { %>
+                            <%
+                            var selected = false;
+                            if (forms !== undefined) {
+                                selected = forms.member.typeOf === memberType;
+                            }
+                            %>
+                            <option value="<%= memberType %>" <% if (selected) { %> selected <% } %>>
+                                <%= memberType %>
+                            </option>
+                            <% }) %>
+                        </select>
+                        <% if (errors && errors['member.typeOf']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['member.typeOf'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+
+                    <div class="form-group bmd-form-group col-md-6">
+                        <label for="member[id]" class="bmd-label-static">メンバーID</label>
+                        <input type="text" class="form-control" id="member[id]" name="member[id]" placeholder="メンバーID"
+                            value="<%= (forms !== undefined && forms.member !== undefined && forms.member !== null) ? forms.member.id : '' %>">
+                        <% if (errors && errors['member.id']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['member.id'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+                </div>
+
                 <% } else { %>
                 <input type="hidden" name="member[typeOf]" value="<%= forms.member.typeOf %>">
                 <input type="hidden" name="member[id]" value="<%= forms.member.id %>">
@@ -51,7 +109,7 @@
                         <% roles.forEach((role) => { %>
                         <%
                         let checked = false;
-                        if (Array.isArray(forms.roleNames) && forms.roleNames.some((roleName)=>role.roleName === roleName)) {
+                        if (Array.isArray(forms.roleName) && forms.roleName.some((roleName)=>role.roleName === roleName)) {
                             checked = true;
                         }
                         %>
