--- a/views/iam/members/form.ejs
+++ b/views/iam/members/form.ejs
@@ -2,9 +2,12 @@
     <div class="card-body">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
+            <% if (isNew) { %>
             <a class="btn btn-primary btn-ok" href="javascript:void(0)">
                 <i class="material-icons">save</i> 保存</a>
-            <% if (!isNew) { %>
+            <% } else { %>
+            <a href="#" class="btn btn-primary" data-toggle="modal"
+            data-target="#modal-update"><i class="material-icons">save</i> 保存</a>
             <a class="btn btn-delete btn-danger" href="javascript:void(0)">
                 <i class="material-icons">delete</i> 削除</a>
             <% } %>
@@ -170,5 +173,36 @@
         </div>
 
     </div>
+    
+<!-- Modal -->
+    <div class="modal fade" id="modal-update" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel"><%= forms.member.id %>のロールを更新しますか？</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p><%= forms.member.id %>のロールを更新するには、ID「<b><%= forms.member.id %></b>」を入力してください。
+                </p>
+                <form>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="confirmUpdate" placeholder="ID"
+                            data-expected="<%= forms.member.id %>">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">キャンセル</button>
+                <!-- <button type="submit" class="btn btn-primary">更新</button> -->
+                <button type="button" class="btn btn-primary disabled update" disabled>更新する</button>
+            </div>
+        </div>
+    </div>
+    </div>
+
 </div>
 <!-- end card -->
