--- a/views/accounts/index.ejs
+++ b/views/accounts/index.ejs
@@ -24,7 +24,7 @@ AC-00
     </div>
 
     <div class="modal fade" id="modal-account" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title"></h4>
