--- a/views/customers/_contactPoint.ejs
+++ b/views/customers/_contactPoint.ejs
@@ -29,9 +29,18 @@
             <% } %>
         </div>
         <div class="form-group bmd-form-group col-4">
-            <label class="bmd-label-floating">telephone</label>
+            <label class="bmd-label-floating">telephone
+                <a href="javascript:void(0);" data-toggle="tooltip"
+                    title="<p class=&quot;text-left mb-0&quot;><a target=&quot;blank&quot; href=&quot;https://ja.wikipedia.org/wiki/E.164&quot;>E.164形式について</a></p>"
+                    style="pointer-events: auto;">
+                    <span class="material-icons" style="font-size: 1.2em;">
+                        help
+                    </span>
+                </a>
+            </label>
             <input class="form-control" name="contactPoint[<%= key %>][telephone]"
                 id="contactPoint[<%= key %>][telephone]" maxlength=128 value="<%= contactPoint[key].telephone %>">
+                <span class="bmd-help">E.164形式で入力してください</span>
             <% if (errors && errors[`contactPoint[${key}].telephone`]) { %>
             <span class="bmd-help text-danger d-block">
                 <%- errors[`contactPoint[${key}].telephone`].msg %>
