- 顧客のバリデーション強化

--- a/views/customers/_contactPoint.ejs
+++ b/views/customers/_contactPoint.ejs
@@ -31,7 +31,7 @@
         <div class="form-group bmd-form-group col-4">
             <label class="bmd-label-floating">telephone
                 <a href="javascript:void(0);" data-toggle="tooltip"
-                    title="<p class=&quot;text-left mb-0&quot;><a target=&quot;blank&quot; href=&quot;https://ja.wikipedia.org/wiki/E.164&quot;>E.164形式について</a></p>"
+                    title="<p class=&quot;text-left mb-0&quot;><a target=&quot;blank&quot; href=&quot;https://ja.wikipedia.org/wiki/E.164&quot;>E.164形式についてはこちら</a><br>例えば、日本の0312345678のような番号であれば、+81312345678と入力します。</p>"
                     style="pointer-events: auto;">
                     <span class="material-icons" style="font-size: 1.2em;">
                         help
