- @cinerino/sdkへの依存を排除 - 注文検索条件拡張

--- a/views/orders/_dataTables.ejs
+++ b/views/orders/_dataTables.ejs
@@ -103,10 +103,10 @@
                                 </div>
                             </div>
                             <div class="form-group bmd-form-group col-md-2">
-                                <label for="admin[id]" class="bmd-label-static">
-                                    仲介
+                                <label for="broker[id]" class="bmd-label-static">
+                                    代理
                                 </label>
-                                <select class="form-control" name="admin[id]" id="admin[id]" style="width: 100%;">
+                                <select class="form-control" name="broker[id]" id="broker[id]" style="width: 100%;">
                                 </select>
                             </div>
                         </div>
@@ -263,7 +263,7 @@
                             <th>金額</th>
                             <th>アイテム</th>
                             <th>決済方法</th>
-                            <th>仲介</th>
+                            <th>代理</th>
                             <th>アプリ</th>
                             <th>返品者</th>
                             <th>返品日時</th>
