- プロジェクトホームに最近のアクションを表示

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -49,6 +49,29 @@ HO-01
                 </div>
             </div>
             <% } %>
+            
+            
+            <% if (roleNames.includes('owner')) { %>
+            <div class="card card-product">
+                <div class="card-body">
+                    <h4 class="card-title">
+                        <span class="pl-1">最近のアクション</span></h4>
+                    </h4>
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="latestActions">
+                            <table class="table table-sm table-hover">
+                                <thead class="text-primary">
+                                    <th></th>
+                                    <th></th>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <% } %> 
         </div>
 
         <div class="col-md-4">
@@ -191,23 +214,7 @@ HO-01
                         </div>
                     </div>
                 </div>
-            </div>
-            
-            <% if (roleNames.includes('owner')) { %>
-            <div class="card card-product">
-                <div class="card-body">
-                    <h4 class="card-title">
-                        <span class="pl-1">最近のアクション</span></h4>
-                    </h4>
-                    <div class="tab-content">
-                        <div class="tab-pane active" id="latestActions">
-                            <table class="table table-sm table-hover">
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <% } %>    
+            </div>   
         </div>
     </div>
 
