--- a/views/ownershipInfos/_dataTables.ejs
+++ b/views/ownershipInfos/_dataTables.ejs
@@ -94,10 +94,10 @@
                             <td name="id">
                                 $id$
                             </td>
-                            <td name="ownedFrom|date:YY-MM-DD HH:mm:ssZ">
+                            <td name="ownedFrom|date:YYYY-MM-DD HH:mm:ssZ">
                                 $ownedFrom$
                             </td>
-                            <td name="ownedThrough|date:YY-MM-DD HH:mm:ssZ">
+                            <td name="ownedThrough|date:YYYY-MM-DD HH:mm:ssZ">
                                 $ownedThrough$
                             </td>
                             <td name="id__ownedBy.typeOf__ownedBy.name|slice:10">
