- 予約に使用アクション検索を追加

--- a/views/reservations/_dataTables.ejs
+++ b/views/reservations/_dataTables.ejs
@@ -332,11 +332,15 @@
                                     表示
                                 </a>
                             </td>
-                            <td name="checkedInText">
-                                <i class="material-icons" style="font-size: 1.2em;">$checkedInText$</i>
+                            <td name="id__checkedInText">
+                                <a href="javascript:void(0)" class="" data-id="$id$">
+                                    <i class="material-icons" style="font-size: 1.2em;">$checkedInText$</i>
+                                </a>
                             </td>
-                            <td name="attendedText">
-                                <i class="material-icons" style="font-size: 1.2em;">$attendedText$</i>
+                            <td name="id__attendedText">
+                                <a href="javascript:void(0)" class="showUseActions" data-id="$id$">
+                                    <i class="material-icons" style="font-size: 1.2em;">$attendedText$</i>
+                                </a>
                             </td>
                             <td name="id__additionalProperty">
                                 <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
