- 高度な設定を必要最低限に表示

--- a/views/customers/form.ejs
+++ b/views/customers/form.ejs
@@ -26,11 +26,18 @@
                     追加特性
                 </a>
             </li>
+            <%
+            const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string')
+                ? process.env.PROJECT_CREATOR_IDS.split(',')
+                : [];
+            %>
+            <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link5" role="tablist">
                     高度な設定
                 </a>
             </li>
+            <% } %>
         </ul>
 
         <div class="tab-content">
