--- a/views/sellers/form.ejs
+++ b/views/sellers/form.ejs
@@ -21,11 +21,18 @@
                     追加特性
                 </a>
             </li>
+            <%
+            const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string')
+                ? process.env.PROJECT_CREATOR_IDS.split(',')
+                : [];
+            %>
+            <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link4" role="tablist">
                     高度な設定
                 </a>
             </li>
+            <% } %>
         </ul>
 
         <div class="tab-content">
