--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -523,7 +523,28 @@
                 <% } %>
 
                 <div class="form-row">
-                    <div class="form-group bmd-form-group">
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="eligibleMembershipType" class="bmd-label-static">
+                            適用メンバーシップ区分
+                        </label>
+                        <div class="input-group">
+                            <select class="form-control" name="eligibleMembershipType" id="eligibleMembershipType"
+                                style="width: 100%;">
+                                <% if (forms.eligibleMembershipType !== undefined) { %>
+                                <option value="<%= JSON.stringify(forms.eligibleMembershipType) %>" selected="selected">
+                                    <%= forms.eligibleMembershipType.name.ja %></option>
+                                <% } %>
+                            </select>
+                        </div>
+    
+                        <% if (errors && errors['eligibleMembershipType']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['eligibleMembershipType'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+    
+                    <div class="form-group bmd-form-group col-md-3">
                         <label for="validRateLimit[scope]" class="bmd-label-static">
                             レート制限
                         </label>
