--- a/views/products/form.ejs
+++ b/views/products/form.ejs
@@ -16,11 +16,18 @@
                     基本設定
                 </a>
             </li>
+            <%
+            const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string')
+                ? process.env.PROJECT_CREATOR_IDS.split(',')
+                : [];
+            %>
+            <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link4" role="tablist">
                     高度な設定
                 </a>
             </li>
+            <% } %>
         </ul>
 
         <div class="tab-content">
@@ -28,11 +35,12 @@
                 <input type="hidden" name="id" value="<%= forms.id %>">
 
                 <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-2">
+                    <div class="form-group bmd-form-group col-md-3">
                         <label for="typeOf" class="bmd-label-static">
                             プロダクトタイプ<span class="text-danger">＊</span>
                         </label>
 
+                        <% if (isNew) { %>
                         <select class="form-control" name="typeOf">
                             <% productTypes.forEach((productType) => { %>
                             <option value="<%= productType.codeValue %>"
@@ -40,6 +48,16 @@
                                 <%= productType.name %></option>
                             <% }) %>
                         </select>
+                        <% } else { %>
+                        <%
+                        const productType = productTypes.find((p) => p.codeValue === forms.typeOf);
+                        const productTypeName = (productType !== undefined) ? productType.name : forms.typeOf;
+                        %>
+                        <input type="text" disabled class="form-control" placeholder=""
+                            value="<%= productTypeName %>">
+                        <input type="hidden" class="form-control" name="typeOf" id="typeOf"
+                            value="<%= forms.typeOf %>">
+                        <% } %>
 
                         <% if (errors && errors['typeOf']) { %>
                         <span class="bmd-help text-danger d-block">
@@ -48,7 +66,7 @@
                         <% } %>
                     </div>
 
-                    <div class="form-group bmd-form-group col-md-2">
+                    <div class="form-group bmd-form-group col-md-3">
                         <label for="productID" class="bmd-label-static">
                             プロダクトID<span class="text-danger">＊</span>
                         </label>
@@ -58,13 +76,13 @@
                             maxlength=30 value="<%= forms.productID %>">
                         <span class="bmd-help">30文字以内でご入力ください</span>
                         <% } else { %>
-                        <input type="text" class="form-control" name="productID" id="productID" placeholder=""
-                            maxlength=30 value="<%= forms.productID %>">
+                        <!-- <input type="text" class="form-control" name="productID" id="productID" placeholder=""
+                            maxlength=30 value="<%= forms.productID %>"> -->
                         <span class="bmd-help">30文字以内でご入力ください</span>
-                        <!-- <input type="text" disabled class="form-control" placeholder="" maxlength=30
+                        <input type="text" disabled class="form-control" placeholder="" maxlength=30
                             value="<%= forms.productID %>">
                         <input type="hidden" class="form-control" name="productID" id="productID"
-                            value="<%= forms.productID %>"> -->
+                            value="<%= forms.productID %>">
                         <% } %>
 
                         <% if (errors && errors['productID']) { %>
@@ -73,7 +91,9 @@
                         </span>
                         <% } %>
                     </div>
+                </div>
 
+                <div class="form-row">
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="name[ja]" class="bmd-label-static">
                             名称<span class="text-danger">＊</span>
@@ -90,8 +110,23 @@
                     </div>
 
                     <div class="form-group bmd-form-group col-md-3">
+                        <label for="name[en]" class="bmd-label-static">
+                            英語名称
+                        </label>
+                        <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder=""
+                            maxlength=30
+                            value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.en : '' %>">
+                        <span class="bmd-help">30文字以内でご入力ください</span>
+                        <% if (errors && errors['name.en']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['name.en'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+
+                    <div class="form-group bmd-form-group col-md-3">
                         <label for="hasOfferCatalog[id]" class="bmd-label-static">
-                            オファーカタログ
+                            カタログ
                         </label>
                         <select class="form-control" name="hasOfferCatalog[id]">
                             <option value="">選択してください</option>
