--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -41,6 +41,13 @@ PR-00
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-2">
+                                    <label for="name" class="bmd-label-static">
+                                        名称
+                                    </label>
+                                    <input type="text" class="form-control" name="name" id="name" placeholder="" maxlength=30>
+                                </div>
+        
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label for="offers[$elemMatch][seller][id]" class="bmd-label-static">
                                         販売者
                                     </label>
