--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -1,3 +1,9 @@
+<%
+const PROJECT_CREATOR_IDS = (typeof process.env.PROJECT_CREATOR_IDS === 'string')
+    ? process.env.PROJECT_CREATOR_IDS.split(',')
+    : [];
+%>
+
 <%- contentFor('title') %>
 プロダクト検索
 <%- contentFor('displayId') %>
@@ -47,6 +53,7 @@ PR-00
                                     <input type="text" class="form-control" name="name" id="name" placeholder="" maxlength=30>
                                 </div>
         
+                                <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
                                 <div class="form-group bmd-form-group col-md-2">
                                     <label for="offers[$elemMatch][seller][id]" class="bmd-label-static">
                                         販売者
@@ -81,6 +88,7 @@ PR-00
                                         </div>
                                     </div>
                                 </div>
+                                <% } %>
                             </div>
                         </form>
                     </div>
@@ -96,8 +104,11 @@ PR-00
                                     <th>プロダクトID</th>
                                     <th>名称</th>
                                     <th>カタログ</th>
+
+                                    <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
                                     <th>Offers</th>
                                     <th>ServiceOutput</th>
+                                    <% } %>
                                 </tr>
                             </thead>
                             <tbody>
@@ -113,6 +124,8 @@ PR-00
                                     <td name="hasOfferCatalog.id">
                                         $hasOfferCatalog.id$
                                     </td>
+
+                                    <% if (PROJECT_CREATOR_IDS.includes(user.profile.sub)) { %>
                                     <td name="id__offers">
                                         <a href="javascript:void(0)" class="showOffers" data-id="$id$">
                                             表示
@@ -123,6 +136,8 @@ PR-00
                                             表示
                                         </a>
                                     </td>
+                                    <% } %>
+
                                 </tr>
                             </tbody>
                         </table>
